# pocketspace

./: README.md
core/: Cargo.toml
core/src/: lib.rs  partition.rs  vhd.rs
