[package]
name = "pocketspace-core"
version = "0.1.0"
edition = "2021"
description = "PocketSpace core library - VHD, encryption, sync"

[dependencies]
# Для роботи з Windows API
windows = { version = "0.58", features = [
    "Win32_Storage_Vhd",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_IO",
] }

# SHA-256 хеші для Sync Engine
sha2 = "0.10"

# SQLite для логу операцій
rusqlite = { version = "0.31", features = ["bundled"] }

# Серіалізація даних
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"